# chat_bot

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  poetry.toml  pyproject.toml
.github/workflows/: build.yml  flake8.yml
app/: entrypoint.sh  initializer.py  main.py
app/config/: db.py  oath.py  openapi.py  static.py  template.py
app/core/exceptions/: exceptions.py
app/core/models/pydantic/: button_pydantic.py  card_pydantic.py  massage_base_pydantic.py  message_list_of_buttons.py  message_list_of_cards.py  message_pydantic.py  way_pydantic.py
app/core/models/tortoise/: business.py  button.py  card.py  carousel.py  image.py  job.py  message.py  product.py  user.py  way.py
app/core/models/tortoise/schemas/: button_schemas.py  card_schemas.py  message_schemas.py  way_schemas.py
app/core/routers/: message.py  message_router.py  user_router.py  way_router.py
app/templates/: verification.html
app/tests/: conftest.py
app/tests/test_api/: test_hello.py
app/tests/test_api/message/: test_create_message.py
app/utils/: email.py
app/utils/api/: authentication.py  constants.py
collection_postman/: Chat bot.postman_collection.json
conf/nginx/: api.conf.template
