[tool.poetry]
name = "hrBotFactory"
version = "0.1.0"
description = ""
authors = ["Murtagh95 <nec.catalano@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10.6"
fastapi = "^0.81.0"
tortoise-orm = "^0.19.2"
pydantic = "^1.9.2"
asyncpg = "^0.26.0"
loguru = "^0.6.0"
uvicorn = "^0.18.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-asyncio = "^0.19.0"
pre-commit = "^2.20.0"
pytest-cov = "^3.0.0"
requests = "^2.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
